--- a/float_psevdo_el.html
+++ b/float_psevdo_el.html
@@ -11,7 +11,7 @@
       Психология цвета: что означает каждый цвет и как он влияет на нашу жизнь?
     </h1>
     <div class="wrapper">
-      <div class="header_float">
+      <div class="header_float clearfix">
         <div class="float">
           <p>
             У каждого цвета есть своё значение, свой характер, который влияет на
@@ -62,10 +62,9 @@
             носил наш «бывший» или «бывшая».
           </p>
         </div>
-        <div class="clr"></div>
       </div>
 
-      <div class="content1_float">
+      <div class="content1_float clearfix">
         <div class="float_wrapper1">
           <div class="white">
             <h3>Значение белого цвета</h3>
@@ -170,10 +169,9 @@
             </p>
           </div>
         </div>
-        <div class="clr"></div>
       </div>
 
-      <div class="content2_float">
+      <div class="content2_float clearfix">
         <div class="float_red red">
           <h3>Значение красного цвета</h3>
           <p>
@@ -215,7 +213,7 @@
               также является цветом отдыха, моря, неба и релаксации.
             </p>
           </div>
-          <div class="float_wrapper4">
+          <div class="float_wrapper4 clearfix">
             <div class="float_pink pink">
               <h3>Значение розового цвета</h3>
               <p>
@@ -249,14 +247,11 @@
                 потенциал.
               </p>
             </div>
-            <div class="clr"></div>
           </div>
-          <div class="clr"></div>
         </div>
-        <div class="clr"></div>
       </div>
 
-      <div class="footer_float">
+      <div class="footer_float clearfix">
         <div class="footer_float_left">
           <div class="float_tip1">
             <h3>Полезные советы: как использовать знания о психологии цвета</h3>
@@ -269,8 +264,8 @@
             </p>
           </div>
 
-          <div class="footer_float_wrapper">
-            <div class="footer_float_wrapper_left">
+          <div class="footer_float_wrapper clearfix">
+            <div class="footer_float_wrapper_left clearfix">
               <div class="float_tip2">
                 <h4>Ваш любимый цвет подходит не для всех случаев</h4>
                 <p>
@@ -283,7 +278,7 @@
                 </p>
               </div>
 
-              <div class="footer_float_wrapper_1">
+              <div class="footer_float_wrapper_1 clearfix">
                 <div class="float_tip4">
                   <h4>Ярче не всегда лучше</h4>
                   <p>
@@ -302,7 +297,6 @@
                     других ситуациях не бойтесь экспериментировать.
                   </p>
                 </div>
-                <div class="clr"></div>
               </div>
             </div>
             <div class="float_tip3">
@@ -330,7 +324,6 @@
                 Особенно трогательное название – цвет парижской грязи.
               </p>
             </div>
-            <div class="clr"></div>
           </div>
         </div>
         <div class="footer_float_right">
@@ -370,9 +363,7 @@
               маловыразительным.
             </p>
           </div>
-          <div class="clr"></div>
         </div>
-        <div class="clr"></div>
       </div>
     </div>
   </body>
