--- a/in_block.html
+++ b/in_block.html
@@ -10,6 +10,7 @@
     <h1>
       Психология цвета: что означает каждый цвет и как он влияет на нашу жизнь?
     </h1>
+    <div class="wrapper">
     <div class="header_in_block">
       <div class="in_block">
         <p>
@@ -243,9 +244,11 @@
         </div>
       </div>
     </div>
-    <div class="footer_in_block">
+    <div class="footer">
+
       <div class="footer_in_block_left">
-        <div class="in_block_tip2">
+
+        <div class="in_block_tip1">
           <h3>Полезные советы: как использовать знания о психологии цвета</h3>
           <h4>Значение</h4>
           <p>
@@ -255,66 +258,70 @@
             большее социальное значение на данный момент, чем все остальные.
           </p>
         </div>
+
         <div class="footer_in_block_wrapper">
-          <div class="footer_in_block_1">
+            
+          <div class="footer_in_block_wrapper_left">
+          
             <div class="in_block_tip2">
-              <h4>Ваш любимый цвет подходит не для всех случаев</h4>
-              <p>
-                Может быть, вы обожаете фиолетовый, однако этот цвет может
-                вызвать тоску, если вы чрезмерно оформите с его помощью вашу
-                комнату. Однако это замечательный цвет в одежде. Можно создавать
-                необычные, непривычные комбинации, например, сочетая его с
-                оранжевым. Но прежде, чем одеться, всегда задумайтесь, подходит
-                ли такой наряд к данному конкретному случаю.
-              </p>
-              <div class="footer_in_block_2">
-                <div class="in_block_tip4">
-                  <h4>Ярче не всегда лучше</h4>
-                  <p>
-                    Насыщенный цвет может привлекательно смотреться в каталоге в
-                    магазине, но в больших объемах на стенах от него будет
-                    рябить в глазах. Чтобы не прогадать, выбирайте более
-                    спокойные и светлые цвета.
-                  </p>
-                </div>
-                <div class="in_block_tip5">
-                  <h4>Контекст играет ключевую роль в выборе цвета</h4>
-                  <p>
-                    Мы знаем о значении цвета в разных культурах и
-                    обстоятельствах. Прийти на собеседование на должность юриста
-                    в ярко-зелёном костюме с блёстками не совсем логично. В
-                    других ситуациях не бойтесь экспериментировать.
-                  </p>
-                </div>
+            <h4>Ваш любимый цвет подходит не для всех случаев</h4>
+            <p>
+              Может быть, вы обожаете фиолетовый, однако этот цвет может вызвать
+              тоску, если вы чрезмерно оформите с его помощью вашу комнату.
+              Однако это замечательный цвет в одежде. Можно создавать необычные,
+              непривычные комбинации, например, сочетая его с оранжевым. Но
+              прежде, чем одеться, всегда задумайтесь, подходит ли такой наряд к
+              данному конкретному случаю.
+            </p>
+            </div>
+              <div class="footer_in_block_wrapper_1">
+              <div class="in_block_tip4">
+                <h4>Ярче не всегда лучше</h4>
+                <p>
+                  Насыщенный цвет может привлекательно смотреться в каталоге в
+                  магазине, но в больших объемах на стенах от него будет рябить
+                  в глазах. Чтобы не прогадать, выбирайте более спокойные и
+                  светлые цвета.
+                </p>
               </div>
+              <div class="in_block_tip5">
+                <h4>Контекст играет ключевую роль в выборе цвета</h4>
+                <p>
+                  Мы знаем о значении цвета в разных культурах и
+                  обстоятельствах. Прийти на собеседование на должность юриста в
+                  ярко-зелёном костюме с блёстками не совсем логично. В других
+                  ситуациях не бойтесь экспериментировать.
+                </p>
             </div>
           </div>
-          <div class="in_block_tip3">
-            <h4>Цвета также должны быть функциональными</h4>
-            <p>
-              Одевая белую рубашку, кто не думал о том, как легко можно её
-              испачкать чем угодно в течение дня? Есть цвета, более устойчивые к
-              загрязнению, или те, что уместнее носить в жару, или такие,
-              которые помогут нам остаться незамеченными если у нас нет
-              настроения…
-            </p>
-            <p>
-              При написании письма или создании плаката важно, чтобы цвет шрифта
-              выделялся на фоновом цвете. Как бы нам ни хотелось написать
-              светло-розовым шрифтом на белом, чёрный на оранжевом видно гораздо
-              лучше. Более того, это одна из самых контрастных комбинаций.
-            </p>
-            <p>
-              На закуску я предлагаю насладиться самыми нетривиальными
-              названиями различных оттенков: так например, помимо цвета бедра
-              испуганной нимфы, есть ещё и цвет испуганной мыши и влюблённой
-              жабы, сочный розовый называется цветом Иудина дерева, а близкий к
-              нашему любимому коралловому и вовсе – куропаткины глаза. Особенно
-              трогательное название – цвет парижской грязи.
-            </p>
+        </div>
+            <div class="in_block_tip3">
+              <h4>Цвета также должны быть функциональными</h4>
+              <p>
+                Одевая белую рубашку, кто не думал о том, как легко можно её
+                испачкать чем угодно в течение дня? Есть цвета, более устойчивые
+                к загрязнению, или те, что уместнее носить в жару, или такие,
+                которые помогут нам остаться незамеченными если у нас нет
+                настроения…
+              </p>
+              <p>
+                При написании письма или создании плаката важно, чтобы цвет
+                шрифта выделялся на фоновом цвете. Как бы нам ни хотелось
+                написать светло-розовым шрифтом на белом, чёрный на оранжевом
+                видно гораздо лучше. Более того, это одна из самых контрастных
+                комбинаций.
+              </p>
+              <p>
+                На закуску я предлагаю насладиться самыми нетривиальными
+                названиями различных оттенков: так например, помимо цвета бедра
+                испуганной нимфы, есть ещё и цвет испуганной мыши и влюблённой
+                жабы, сочный розовый называется цветом Иудина дерева, а близкий
+                к нашему любимому коралловому и вовсе – куропаткины глаза.
+                Особенно трогательное название – цвет парижской грязи.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
       <div class="footer_in_block_right">
         <div class="in_block_tip6">
           <h4>Используйте цвета, чтобы улучшить память</h4>
@@ -351,7 +358,7 @@
             серым он становится слишком консервативным и маловыразительным.
           </p>
         </div>
-      </div>
-    </div>
+      </div>  
+  </div>
   </body>
 </html>
