--- a/table_cell.html
+++ b/table_cell.html
@@ -10,7 +10,8 @@
     <h1>
       Психология цвета: что означает каждый цвет и как он влияет на нашу жизнь?
     </h1>
-    <div class="header">
+    <div class="wrapper">
+    <div>
       <div class="table_cell">
         <p>
           У каждого цвета есть своё значение, свой характер, который влияет на
@@ -243,8 +244,10 @@
         </div>
       </div>
     </div>
-    <div class="footer">
+    <div class="footer_table_cell">
+
       <div class="footer_table_cell_left">
+
         <div class="table_cell_tip1">
           <h3>Полезные советы: как использовать знания о психологии цвета</h3>
           <h4>Значение</h4>
@@ -255,8 +258,11 @@
             большее социальное значение на данный момент, чем все остальные.
           </p>
         </div>
+
         <div class="footer_table_cell_wrapper">
-            <div class="footer_table_cell_1">
+            
+          <div class="footer_table_cell_wrapper_left">
+          
             <div class="table_cell_tip2">
             <h4>Ваш любимый цвет подходит не для всех случаев</h4>
             <p>
@@ -267,6 +273,8 @@
               прежде, чем одеться, всегда задумайтесь, подходит ли такой наряд к
               данному конкретному случаю.
             </p>
+            </div>
+              <div class="footer_table_cell_wrapper_1">
               <div class="table_cell_tip4">
                 <h4>Ярче не всегда лучше</h4>
                 <p>
@@ -285,7 +293,8 @@
                   ситуациях не бойтесь экспериментировать.
                 </p>
             </div>
-            </div>
+          </div>
+        </div>
             <div class="table_cell_tip3">
               <h4>Цвета также должны быть функциональными</h4>
               <p>
@@ -312,8 +321,8 @@
               </p>
             </div>
           </div>
+
         </div>
-      </div>
       <div class="footer_table_cell_right">
         <div class="table_cell_tip6">
           <h4>Используйте цвета, чтобы улучшить память</h4>
@@ -350,7 +359,7 @@
             серым он становится слишком консервативным и маловыразительным.
           </p>
         </div>
-      </div>
-    </div>
+      </div>  
+  </div>
   </body>
 </html>
