--- a/flex.html
+++ b/flex.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>in_block</title>
+    <title>flexbox</title>
     <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
@@ -11,8 +11,8 @@
       Психология цвета: что означает каждый цвет и как он влияет на нашу жизнь?
     </h1>
     <div class="wrapper">
-      <div class="header_in_block">
-        <div class="in_block">
+      <div class="header_flex">
+        <div class="flex">
           <p>
             У каждого цвета есть своё значение, свой характер, который влияет на
             нашу жизнь и поведение гораздо больше, чем кажется. Что такое
@@ -30,7 +30,7 @@
             для глаз или сверкающее жёлтое дерево, это удивляет нас.
           </p>
         </div>
-        <div class="in_block">
+        <div class="flex">
           <p>
             Каково значение цветов в психологии? Что означает каждый цвет?
             Существует целая наука о цвете, которая включает знания о природе,
@@ -43,7 +43,7 @@
             ключ к пониманию поведения людей.
           </p>
         </div>
-        <div class="in_block">
+        <div class="flex">
           <p>
             Каждый день мы выполняем огромное количество дел и подвержены
             влиянию многочисленных стимулов. Нашему мозгу постоянно бросают
@@ -63,8 +63,9 @@
           </p>
         </div>
       </div>
-      <div class="content1_in_block">
-        <div class="in_block_wrapper1">
+
+      <div class="content1_flex">
+        <div class="flex_wrapper1">
           <div class="white">
             <h3>Значение белого цвета</h3>
             <p>
@@ -131,7 +132,7 @@
             </p>
           </div>
         </div>
-        <div class="in_block_wrapper2">
+        <div class="flex_wrapper2">
           <div class="orange">
             <h3>Значение оранжевого цвета</h3>
             Оранжевый цвет мгновенно привлекает внимание. Это цвет различных
@@ -169,8 +170,9 @@
           </div>
         </div>
       </div>
-      <div class="content2_in_block">
-        <div class="in_block_red red">
+
+      <div class="content2_flex">
+        <div class="flex_red red">
           <h3>Значение красного цвета</h3>
           <p>
             Красный цвет — цвет страсти, он захватывает внимание и одновременно
@@ -192,8 +194,9 @@
             соревнованиями спортсменам рекомендуется носить красные очки.
           </p>
         </div>
-        <div class="in_block_wrapper3">
-          <div class="in_block_blue blue">
+
+        <div class="flex_wrapper3">
+          <div class="flex_blue blue">
             <h3>Значение синего цвета</h3>
             <p>
               Синий или голубой цвет у многих являются любимыми. Это цвет
@@ -210,8 +213,8 @@
               также является цветом отдыха, моря, неба и релаксации.
             </p>
           </div>
-          <div class="in_block_wrapper4">
-            <div class="in_block_pink pink">
+          <div class="flex_wrapper4">
+            <div class="flex_pink pink">
               <h3>Значение розового цвета</h3>
               <p>
                 Согласно психологии цвета, розовый представляет сладость,
@@ -227,7 +230,7 @@
                 он ассоциируется с дешёвыми и некачественными вещами.
               </p>
             </div>
-            <div class="in_block_violet violet">
+            <div class="flex_violet violet">
               <h3>Значение фиолетового цвета</h3>
               <p>
                 Фиолетовый цвет таинственен и необычен. Психология цвета относит
@@ -247,9 +250,10 @@
           </div>
         </div>
       </div>
-      <div class="footer">
-        <div class="footer_in_block_left">
-          <div class="in_block_tip1">
+
+      <div class="footer_flex">
+        <div class="footer_flex_left">
+          <div class="flex_tip1">
             <h3>Полезные советы: как использовать знания о психологии цвета</h3>
             <h4>Значение</h4>
             <p>
@@ -260,9 +264,9 @@
             </p>
           </div>
 
-          <div class="footer_in_block_wrapper">
-            <div class="footer_in_block_wrapper_left">
-              <div class="in_block_tip2">
+          <div class="footer_flex_wrapper">
+            <div class="footer_flex_wrapper_left">
+              <div class="flex_tip2">
                 <h4>Ваш любимый цвет подходит не для всех случаев</h4>
                 <p>
                   Может быть, вы обожаете фиолетовый, однако этот цвет может
@@ -273,8 +277,9 @@
                   подходит ли такой наряд к данному конкретному случаю.
                 </p>
               </div>
-              <div class="footer_in_block_wrapper_1">
-                <div class="in_block_tip4">
+
+              <div class="footer_flex_wrapper_1">
+                <div class="flex_tip4">
                   <h4>Ярче не всегда лучше</h4>
                   <p>
                     Насыщенный цвет может привлекательно смотреться в каталоге в
@@ -283,7 +288,7 @@
                     спокойные и светлые цвета.
                   </p>
                 </div>
-                <div class="in_block_tip5">
+                <div class="flex_tip5">
                   <h4>Контекст играет ключевую роль в выборе цвета</h4>
                   <p>
                     Мы знаем о значении цвета в разных культурах и
@@ -294,7 +299,7 @@
                 </div>
               </div>
             </div>
-            <div class="in_block_tip3">
+            <div class="flex_tip3">
               <h4>Цвета также должны быть функциональными</h4>
               <p>
                 Одевая белую рубашку, кто не думал о том, как легко можно её
@@ -321,8 +326,8 @@
             </div>
           </div>
         </div>
-        <div class="footer_in_block_right">
-          <div class="in_block_tip6">
+        <div class="footer_flex_right">
+          <div class="float_tip6">
             <h4>Используйте цвета, чтобы улучшить память</h4>
             <p>
               Если вы готовитесь к экзамену и не можете запомнить, скажем,
@@ -333,7 +338,7 @@
               свяжите каждый цвет с определённым значением.
             </p>
           </div>
-          <div class="in_block_tip7">
+          <div class="flex_tip7">
             <h4>Будьте последовательны</h4>
             <p>
               Если у вас есть свой бизнес или вы только об этом задумываетесь,
@@ -346,7 +351,7 @@
               или развития бизнеса.
             </p>
           </div>
-          <div class="in_block_tip8">
+          <div class="flex_tip8">
             <h4>Главное — уметь сочетать цвета</h4>
             <p>
               Представим, что нам нужно отправить важное письмо или разработать
