--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
-    <h3><a target="blanck" href="./float.html">float</a></h3>
-    <h3><a target="blanck" href="./in_block.html">in_block</a></h3>
+    <div class="nav">
+    <h3><a target="blanck" href="./in_block.html">inline_block</a></h3>
     <h3><a target="blanck" href="./table_cell.html">table_cell</a></h3>
+    <h3><a target="blanck" href="./float.html">float</a></h3>
+    <h3>
+      <a target="blanck" href="./float_psevdo_el.html">float_psevdo_el</a>
+    </h3>
+    <h3>
+      <a target="blanck" href="./flex.html">flexbox</a>
+    </h3>
+  </div>
   </body>
 </html>
