--- a/flex.html
+++ b/flex.html
@@ -12,7 +12,7 @@
     </h1>
     <div class="wrapper">
       <div class="header_flex">
-        <div class="flex">
+        <div class="in_flex400">
           <p>
             У каждого цвета есть своё значение, свой характер, который влияет на
             нашу жизнь и поведение гораздо больше, чем кажется. Что такое
@@ -30,7 +30,7 @@
             для глаз или сверкающее жёлтое дерево, это удивляет нас.
           </p>
         </div>
-        <div class="flex">
+        <div class="in_flex400">
           <p>
             Каково значение цветов в психологии? Что означает каждый цвет?
             Существует целая наука о цвете, которая включает знания о природе,
@@ -43,7 +43,7 @@
             ключ к пониманию поведения людей.
           </p>
         </div>
-        <div class="flex">
+        <div class="in_flex400">
           <p>
             Каждый день мы выполняем огромное количество дел и подвержены
             влиянию многочисленных стимулов. Нашему мозгу постоянно бросают
@@ -66,7 +66,7 @@
 
       <div class="content1_flex">
         <div class="flex_wrapper1">
-          <div class="white">
+          <div class="white in_flex800">
             <h3>Значение белого цвета</h3>
             <p>
               Белый — цвет снега, молока, хлопка, платья невесты. Он
@@ -98,7 +98,7 @@
               символом доброты.
             </p>
           </div>
-          <div class="yellow">
+          <div class="yellow in_flex800">
             <h3>Значение жёлтого цвета</h3>
             <p>
               Жёлтый цвет — это цвет позитива, оптимизма, молодости, надёжности
@@ -133,7 +133,7 @@
           </div>
         </div>
         <div class="flex_wrapper2">
-          <div class="orange">
+          <div class="orange in_flex400">
             <h3>Значение оранжевого цвета</h3>
             Оранжевый цвет мгновенно привлекает внимание. Это цвет различных
             фруктов, цвет заката. Рыжеволосые люди также всегда являются
@@ -142,7 +142,7 @@
             оранжевым. Согласно психологии цвета, оранжевый — цвет энергии,
             экстравагантности, трансформации и уникальности.
           </div>
-          <div class="grey">
+          <div class="grey in_flex400">
             <h3>Значение серого цвета</h3>
             <p>
               В психологии цвета серый символизирует, главным образом, старость,
@@ -152,7 +152,7 @@
               элегантности в моде или «сером веществе» головного мозга.
             </p>
           </div>
-          <div class="green">
+          <div class="green in_flex400">
             <h3>Значение зелёного цвета</h3>
             <p>
               Зелёный — это самый естественный цвет, цвет природы, травы,
@@ -172,7 +172,7 @@
       </div>
 
       <div class="content2_flex">
-        <div class="flex_red red">
+        <div class="red in_flex400">
           <h3>Значение красного цвета</h3>
           <p>
             Красный цвет — цвет страсти, он захватывает внимание и одновременно
@@ -194,9 +194,8 @@
             соревнованиями спортсменам рекомендуется носить красные очки.
           </p>
         </div>
-
-        <div class="flex_wrapper3">
-          <div class="flex_blue blue">
+        <div class="in_flex800">
+          <div class="blue">
             <h3>Значение синего цвета</h3>
             <p>
               Синий или голубой цвет у многих являются любимыми. Это цвет
@@ -214,7 +213,7 @@
             </p>
           </div>
           <div class="flex_wrapper4">
-            <div class="flex_pink pink">
+            <div class="pink in_flex400">
               <h3>Значение розового цвета</h3>
               <p>
                 Согласно психологии цвета, розовый представляет сладость,
@@ -230,7 +229,7 @@
                 он ассоциируется с дешёвыми и некачественными вещами.
               </p>
             </div>
-            <div class="flex_violet violet">
+            <div class="violet in_flex400">
               <h3>Значение фиолетового цвета</h3>
               <p>
                 Фиолетовый цвет таинственен и необычен. Психология цвета относит
@@ -253,7 +252,7 @@
 
       <div class="footer_flex">
         <div class="footer_flex_left">
-          <div class="flex_tip1">
+          <div class="in_flex800">
             <h3>Полезные советы: как использовать знания о психологии цвета</h3>
             <h4>Значение</h4>
             <p>
@@ -266,7 +265,7 @@
 
           <div class="footer_flex_wrapper">
             <div class="footer_flex_wrapper_left">
-              <div class="flex_tip2">
+              <div class="in_flex400">
                 <h4>Ваш любимый цвет подходит не для всех случаев</h4>
                 <p>
                   Может быть, вы обожаете фиолетовый, однако этот цвет может
@@ -279,7 +278,7 @@
               </div>
 
               <div class="footer_flex_wrapper_1">
-                <div class="flex_tip4">
+                <div class="in_flex200">
                   <h4>Ярче не всегда лучше</h4>
                   <p>
                     Насыщенный цвет может привлекательно смотреться в каталоге в
@@ -288,7 +287,7 @@
                     спокойные и светлые цвета.
                   </p>
                 </div>
-                <div class="flex_tip5">
+                <div class="in_flex200">
                   <h4>Контекст играет ключевую роль в выборе цвета</h4>
                   <p>
                     Мы знаем о значении цвета в разных культурах и
@@ -299,7 +298,7 @@
                 </div>
               </div>
             </div>
-            <div class="flex_tip3">
+            <div class="in_flex400">
               <h4>Цвета также должны быть функциональными</h4>
               <p>
                 Одевая белую рубашку, кто не думал о том, как легко можно её
@@ -327,7 +326,7 @@
           </div>
         </div>
         <div class="footer_flex_right">
-          <div class="float_tip6">
+          <div class="in_flex400">
             <h4>Используйте цвета, чтобы улучшить память</h4>
             <p>
               Если вы готовитесь к экзамену и не можете запомнить, скажем,
@@ -338,7 +337,7 @@
               свяжите каждый цвет с определённым значением.
             </p>
           </div>
-          <div class="flex_tip7">
+          <div class="in_flex400">
             <h4>Будьте последовательны</h4>
             <p>
               Если у вас есть свой бизнес или вы только об этом задумываетесь,
@@ -351,7 +350,7 @@
               или развития бизнеса.
             </p>
           </div>
-          <div class="flex_tip8">
+          <div class="in_flex400">
             <h4>Главное — уметь сочетать цвета</h4>
             <p>
               Представим, что нам нужно отправить важное письмо или разработать
