--- a/flex.html
+++ b/flex.html
@@ -251,8 +251,8 @@
       </div>
 
       <div class="footer_flex">
-        <div class="footer_flex_left">
-          <div class="in_flex800">
+        <div class="in_flex800">
+          <div>
             <h3>Полезные советы: как использовать знания о психологии цвета</h3>
             <h4>Значение</h4>
             <p>
@@ -325,7 +325,7 @@
             </div>
           </div>
         </div>
-        <div class="footer_flex_right">
+        <div class="in_flex400">
           <div class="in_flex400">
             <h4>Используйте цвета, чтобы улучшить память</h4>
             <p>
