--- a/flex.html
+++ b/flex.html
@@ -65,8 +65,8 @@
       </div>
 
       <div class="content1_flex">
-        <div class="flex_wrapper1">
-          <div class="white in_flex800">
+        <div class="in_flex800">
+          <div class="white">
             <h3>Значение белого цвета</h3>
             <p>
               Белый — цвет снега, молока, хлопка, платья невесты. Он
@@ -98,7 +98,7 @@
               символом доброты.
             </p>
           </div>
-          <div class="yellow in_flex800">
+          <div class="yellow">
             <h3>Значение жёлтого цвета</h3>
             <p>
               Жёлтый цвет — это цвет позитива, оптимизма, молодости, надёжности
@@ -132,8 +132,8 @@
             </p>
           </div>
         </div>
-        <div class="flex_wrapper2">
-          <div class="orange in_flex400">
+        <div class="in_flex400">
+          <div class="orange">
             <h3>Значение оранжевого цвета</h3>
             Оранжевый цвет мгновенно привлекает внимание. Это цвет различных
             фруктов, цвет заката. Рыжеволосые люди также всегда являются
@@ -142,7 +142,7 @@
             оранжевым. Согласно психологии цвета, оранжевый — цвет энергии,
             экстравагантности, трансформации и уникальности.
           </div>
-          <div class="grey in_flex400">
+          <div class="grey">
             <h3>Значение серого цвета</h3>
             <p>
               В психологии цвета серый символизирует, главным образом, старость,
@@ -152,7 +152,7 @@
               элегантности в моде или «сером веществе» головного мозга.
             </p>
           </div>
-          <div class="green in_flex400">
+          <div class="green">
             <h3>Значение зелёного цвета</h3>
             <p>
               Зелёный — это самый естественный цвет, цвет природы, травы,
@@ -249,7 +249,6 @@
           </div>
         </div>
       </div>
-
       <div class="footer_flex">
         <div class="in_flex800">
           <div>
@@ -262,10 +261,9 @@
               большее социальное значение на данный момент, чем все остальные.
             </p>
           </div>
-
           <div class="footer_flex_wrapper">
-            <div class="footer_flex_wrapper_left">
-              <div class="in_flex400">
+            <div class="in_flex400">
+              <div>
                 <h4>Ваш любимый цвет подходит не для всех случаев</h4>
                 <p>
                   Может быть, вы обожаете фиолетовый, однако этот цвет может
@@ -276,7 +274,6 @@
                   подходит ли такой наряд к данному конкретному случаю.
                 </p>
               </div>
-
               <div class="footer_flex_wrapper_1">
                 <div class="in_flex200">
                   <h4>Ярче не всегда лучше</h4>
@@ -326,7 +323,7 @@
           </div>
         </div>
         <div class="in_flex400">
-          <div class="in_flex400">
+          <div>
             <h4>Используйте цвета, чтобы улучшить память</h4>
             <p>
               Если вы готовитесь к экзамену и не можете запомнить, скажем,
@@ -337,7 +334,7 @@
               свяжите каждый цвет с определённым значением.
             </p>
           </div>
-          <div class="in_flex400">
+          <div>
             <h4>Будьте последовательны</h4>
             <p>
               Если у вас есть свой бизнес или вы только об этом задумываетесь,
@@ -350,7 +347,7 @@
               или развития бизнеса.
             </p>
           </div>
-          <div class="in_flex400">
+          <div>
             <h4>Главное — уметь сочетать цвета</h4>
             <p>
               Представим, что нам нужно отправить важное письмо или разработать
